--- a/index.html
+++ b/index.html
@@ -288,58 +288,77 @@
 
 <!-- Projects Section -->
 <section id="projects" class="py-20 bg-gray-100">
-    <div class="max-w-screen-xl mx-auto px-6 text-center">
-        <h2 class="text-5xl font-extrabold text-gray-800 mb-10">🚀 My Projects</h2>
-        <p class="text-lg text-gray-700 mb-12">Here are some of the projects I have worked on. I bring creativity and technical expertise to every project, ensuring that each one is innovative, functional, and beautiful.</p>
+    <div class="max-w-screen-xl mx-auto px-6">
+        <h2 class="text-5xl font-extrabold text-gray-800 mb-10 text-center">🚀 My Projects</h2>
+        <p class="text-lg text-gray-700 mb-12 text-center">Here are some of the projects I have worked on. I bring creativity and technical expertise to every project, ensuring that each one is innovative, functional, and beautiful.</p>
 
-        <!-- Project Cards Container -->
+        <!-- Web Development -->
+        <h3 class="text-3xl font-bold text-gray-800 mb-6 text-left">Web Development</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-            <!-- Project 1 -->
-            <div class="bg-white shadow-lg rounded-lg overflow-hidden transform hover:scale-105 transition duration-500">
-                <img src="project-image-1.jpg" alt="Project 1" class="w-full h-48 object-cover"/>
-                <div class="p-6">
-                    <h3 class="text-2xl font-semibold text-gray-800">Project Name 1</h3>
-                    <p class="mt-4 text-gray-600">A brief description of the project goes here. Highlight its features, technologies used, and what makes it unique.</p>
-                    <div class="mt-4">
-                        <a href="#" class="inline-block bg-orange-600 hover:bg-orange-700 text-white py-3 px-6 rounded-full text-lg font-semibold transition duration-300">
-                            View Project
-                        </a>
-                    </div>
+            <div class="bg-white shadow-lg rounded-lg overflow-hidden transition-transform transform hover:scale-105 p-4">
+                <img src="https://images.unsplash.com/photo-1542010589005-d1eacc3918f2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8UmVjaXBlfGVufDB8fDB8fHww" alt="Recipe Project" class="w-full h-64 object-cover"/>
+                <div class="p-4 text-center">
+                    <h3 class="text-xl font-bold text-gray-800">Recipe</h3>
+                    <p class="mt-2 text-gray-600">Implemented an intuitive search functionality in a digital recipe book, improving recipe discovery times by 60%.</p>
+                    <a href="https://github.com/SanjanaGharat/Recipie-Project" class="inline-block mt-4 bg-orange-500 text-white py-2 px-4 rounded-full font-bold hover:bg-orange-600">View Project</a>
                 </div>
             </div>
-
-            <!-- Project 2 -->
-            <div class="bg-white shadow-lg rounded-lg overflow-hidden transform hover:scale-105 transition duration-500">
-                <img src="project-image-2.jpg" alt="Project 2" class="w-full h-48 object-cover"/>
-                <div class="p-6">
-                    <h3 class="text-2xl font-semibold text-gray-800">Project Name 2</h3>
-                    <p class="mt-4 text-gray-600">This project focuses on [insert what the project is about]. With a combination of [technologies used], it achieves [outcome].</p>
-                    <div class="mt-4">
-                        <a href="#" class="inline-block bg-orange-600 hover:bg-orange-700 text-white py-3 px-6 rounded-full text-lg font-semibold transition duration-300">
-                            View Project
-                        </a>
-                    </div>
+            <div class="bg-white shadow-lg rounded-lg overflow-hidden transition-transform transform hover:scale-105 p-4">
+                <img src="https://media.istockphoto.com/id/1404003246/photo/closeup-of-one-female-torso-holding-a-file-in-her-arms-at-the-office-mixed-race-businesswoman.webp?a=1&b=1&s=612x612&w=0&k=20&c=5_78oSqk21Hr9RZGZv9BM8xK-fwqot8HLWzCfV_GSO8=" alt="Portfolio Project" class="w-full h-64 object-cover"/>
+                <div class="p-4 text-center">
+                    <h3 class="text-xl font-bold text-gray-800">Portfolio</h3>
+                    <p class="mt-2 text-gray-600">A responsive digital resume built with HTML, CSS, and JavaScript, showcasing my 99% credentials.</p>
+                    <a href="https://github.com/SanjanaGharat/Myportfolio" class="inline-block mt-4 bg-orange-500 text-white py-2 px-4 rounded-full font-bold hover:bg-orange-600">View Project</a>
                 </div>
             </div>
-
-            <!-- Project 3 -->
-            <div class="bg-white shadow-lg rounded-lg overflow-hidden transform hover:scale-105 transition duration-500">
-                <img src="project-image-3.jpg" alt="Project 3" class="w-full h-48 object-cover"/>
-                <div class="p-6">
-                    <h3 class="text-2xl font-semibold text-gray-800">Project Name 3</h3>
-                    <p class="mt-4 text-gray-600">An in-depth look into how this project came to life and the challenges I overcame. [Talk about tech stack or innovation].</p>
-                    <div class="mt-4">
-                        <a href="#" class="inline-block bg-orange-600 hover:bg-orange-700 text-white py-3 px-6 rounded-full text-lg font-semibold transition duration-300">
-                            View Project
-                        </a>
-                    </div>
+            <div class="bg-white shadow-lg rounded-lg overflow-hidden transition-transform transform hover:scale-105 p-4">
+                <img src="https://plus.unsplash.com/premium_photo-1728224403721-a4affa8e30ff?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fGUlMjBjb21tZXJjZSUyMHdlYiUyMGFwcHxlbnwwfHwwfHx8MA%3D%3D" alt="Viresta Project" class="w-full h-64 object-cover"/>
+                <div class="p-4 text-center">
+                    <h3 class="text-xl font-bold text-gray-800">Viresta</h3>
+                    <p class="mt-2 text-gray-600">Developed a responsive e-commerce web app with smooth animations and a mobile-first design using ReactJS and Framer Motion.</p>
+                    <a href="https://github.com/SanjanaGharat/Viresta" class="inline-block mt-4 bg-orange-500 text-white py-2 px-4 rounded-full font-bold hover:bg-orange-600">View Project</a>
                 </div>
             </div>
+        </div>
 
-            <!-- More projects can be added similarly... -->
+        <!-- Machine Learning -->
+        <h3 class="text-3xl font-bold text-gray-800 mt-16 mb-6 text-left">Machine Learning</h3>
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+            <div class="bg-white shadow-lg rounded-lg overflow-hidden transition-transform transform hover:scale-105 p-4">
+                <img src="https://media.istockphoto.com/id/913062778/photo/diet-plan-concept.webp?a=1&b=1&s=612x612&w=0&k=20&c=j0-R8xYhy7yAtgZo-GXsRqiEYvLf3SvuB7u4izUYJAw=" alt="Swasth.ai Project" class="w-full h-64 object-cover"/>
+                <div class="p-4 text-center">
+                    <h3 class="text-xl font-bold text-gray-800">Swasth.ai</h3>
+                    <p class="mt-2 text-gray-600">An ML model that predicts the nutritional attributes of food items with 80% accuracy.</p>
+                    <a href="https://github.com/SanjanaGharat/Swasth.ai" class="inline-block mt-4 bg-orange-500 text-white py-2 px-4 rounded-full font-bold hover:bg-orange-600">View Project</a>
+                </div>
+            </div>
+            <div class="bg-white shadow-lg rounded-lg overflow-hidden transition-transform transform hover:scale-105 p-4">
+                <img src="https://media.istockphoto.com/id/2182242357/photo/hr-attrition-employee-retention-human-resources-analytics-and-engagement-crm-customer.webp?a=1&b=1&s=612x612&w=0&k=20&c=5ielke1TUzrpPi5DZ-618ketJNfpfFbguDArgaqwoNI=" alt="Customer Churn Project" class="w-full h-64 object-cover"/>
+                <div class="p-4 text-center">
+                    <h3 class="text-xl font-bold text-gray-800">Customer Churn Prediction</h3>
+                    <p class="mt-2 text-gray-600">A trained ML model that predicts customer attrition with 85% accuracy using data from 1,000+ customers.</p>
+                    <a href="https://github.com/SanjanaGharat/Customer-Churn-Prediction" class="inline-block mt-4 bg-orange-500 text-white py-2 px-4 rounded-full font-bold hover:bg-orange-600">View Project</a>
+                </div>
+            </div>
+            
+        </div>
+
+        <!-- Blockchain -->
+        <h3 class="text-3xl font-bold text-gray-800 mt-16 mb-6 text-left">Blockchain</h3>
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+            <div class="bg-white shadow-lg rounded-lg overflow-hidden transition-transform transform hover:scale-105 p-4">
+                <img src="https://media.istockphoto.com/id/1321835688/photo/concept-nft-or-non-fungible-token.webp?a=1&b=1&s=612x612&w=0&k=20&c=9vLtC9mHgxo057qFR4c7eG76rUs4qT7uqKNbdUlUdNw=" alt="NFTHub Project" class="w-full h-64 object-cover"/>
+                <div class="p-4 text-center">
+                    <h3 class="text-xl font-bold text-gray-800">NFTHub</h3>
+                    <p class="mt-2 text-gray-600">A platform where users can buy and sell NFTs, facilitating over 100 transactions.</p>
+                    <a href="https://github.com/SanjanaGharat/NFT-FINAL-" class="inline-block mt-4 bg-orange-500 text-white py-2 px-4 rounded-full font-bold hover:bg-orange-600">View Project</a>
+                </div>
+            </div>
         </div>
     </div>
 </section>
+
+
 
 
 <!-- Contact Section -->
@@ -443,7 +462,7 @@
 
 <!-- Footer -->
 <footer class="bg-gray-900 text-white text-center py-4">
-    <p>&copy; 2025 Your Name. All Rights Reserved.</p>
+    <p>&copy; 2025 Sanjana Gharat. All Rights Reserved.</p>
 </footer>
 
 <script>
