--- a/index.html
+++ b/index.html
@@ -129,22 +129,22 @@
         <h2 class="text-3xl font-semibold text-gray-800">Connect with Me</h2>
         <div class="mt-4 flex justify-center space-x-6">
             <!-- Social Icons -->
-            <a href="https://facebook.com" target="_blank" class="text-gray-800 hover:text-blue-600 transition duration-300">
+            <!-- <a href="https://facebook.com" target="_blank" class="text-gray-800 hover:text-blue-600 transition duration-300">
                 <i class="fab fa-facebook-f text-2xl"></i>
-            </a>
-            <a href="https://twitter.com" target="_blank" class="text-gray-800 hover:text-blue-400 transition duration-300">
+            </a> -->
+            <!-- <a href="https://twitter.com" target="_blank" class="text-gray-800 hover:text-blue-400 transition duration-300">
                 <i class="fab fa-twitter text-2xl"></i>
-            </a>
-            <a href="https://linkedin.com" target="_blank" class="text-gray-800 hover:text-blue-700 transition duration-300">
+            </a> -->
+            <a href="https://www.linkedin.com/in/sanjana-gharat-b62752250/" target="_blank" class="text-gray-800 hover:text-blue-700 transition duration-300">
                 <i class="fab fa-linkedin-in text-2xl"></i>
             </a>
-            <a href="https://github.com" target="_blank" class="text-gray-800 hover:text-black transition duration-300">
+            <a href="https://github.com/SanjanaGharat" target="_blank" class="text-gray-800 hover:text-black transition duration-300">
                 <i class="fab fa-github text-2xl"></i>
             </a>
-            <a href="https://instagram.com" target="_blank" class="text-gray-800 hover:text-pink-600 transition duration-300">
+            <a href="https://www.instagram.com/sanjana_.gharat/" target="_blank" class="text-gray-800 hover:text-pink-600 transition duration-300">
                 <i class="fab fa-instagram text-2xl"></i>
             </a>
-            <a href="mailto:your.email@example.com" class="text-gray-800 hover:text-orange-600 transition duration-300">
+            <a href="mailto:sanjanagharat16@gmail.com" class="text-gray-800 hover:text-orange-600 transition duration-300">
                 <i class="fas fa-envelope text-2xl"></i>
             </a>
         </div>
@@ -181,7 +181,7 @@
 
                 <!-- Buttons -->
                 <div class="mt-6 flex space-x-4 justify-center md:justify-start">
-                    <a href="your-cv-link.pdf" class="bg-orange-600 hover:bg-orange-700 text-white py-3 px-6 rounded-full text-lg font-semibold transition duration-300">
+                    <a href="resume.pdf" class="bg-orange-600 hover:bg-orange-700 text-white py-3 px-6 rounded-full text-lg font-semibold transition duration-300">
                         Download CV
                     </a>
                     <a href="#contact" class="bg-orange-600 hover:bg-orange-700 text-white py-3 px-6 rounded-full text-lg font-semibold transition duration-300">
@@ -230,7 +230,6 @@
 </section>
 
 
-
 <!-- Education & Experience Section -->
 <section id="education-experience" class="py-20 bg-gray-100">
     <div class="max-w-screen-xl mx-auto px-6 md:px-12">
@@ -268,17 +267,38 @@
 
                 <div class="relative border-l-4 border-orange-600 pl-6 space-y-8">
                     <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition duration-300">
-                        <h4 class="text-xl font-semibold text-gray-800">Content Developer</h4>
-                        <p class="text-gray-500">📅 May 2023 - May 2023</p>
-                        <p class="text-gray-700"><strong>Marpu Foundation (NGO)</strong></p>
-                        <p class="text-gray-700 mt-2">Internship focused on content creation and development.</p>
+                        <h4 class="text-xl font-semibold text-gray-800">Content Writing Intern</h4>
+                        <p class="text-gray-500">📅 May 2023</p>
+                        <p class="text-gray-700"><strong>Marpu Foundation</strong></p>
+                        <p class="text-gray-700 mt-2">Wrote blogs, created social media posts, and drafted newsletters.</p>
                     </div>
 
                     <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition duration-300">
                         <h4 class="text-xl font-semibold text-gray-800">Core Member (Design Team)</h4>
                         <p class="text-gray-500">📅 2024 - Present</p>
-                        <p class="text-gray-700"><strong>Open Source Club</strong></p>
-                        <p class="text-gray-700 mt-2">Contributing to UI/UX and graphic design for open-source projects.</p>
+                        <p class="text-gray-700"><strong>Open Source Club, VIT Bhopal</strong></p>
+                        <p class="text-gray-700 mt-2">Designed visuals and collaborated on UI for open-source projects.</p>
+                    </div>
+
+                    <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition duration-300">
+                        <h4 class="text-xl font-semibold text-gray-800">Web3 Developer</h4>
+                        <p class="text-gray-500">📅 June 2024 - July 2024</p>
+                        <p class="text-gray-700"><strong>Hackonblocks</strong></p>
+                        <p class="text-gray-700 mt-2">Built a blockchain solution and participated in workshops.</p>
+                    </div>
+
+                    <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition duration-300">
+                        <h4 class="text-xl font-semibold text-gray-800">Participant & Research Paper Author</h4>
+                        <p class="text-gray-500">📅 2024</p>
+                        <p class="text-gray-700"><strong>World Energy Conference, Turkey</strong></p>
+                        <p class="text-gray-700 mt-2">Presented research on renewable energy and published a paper.</p>
+                    </div>
+
+                    <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition duration-300">
+                        <h4 class="text-xl font-semibold text-gray-800">Front-End Developer Intern</h4>
+                        <p class="text-gray-500">📅 Oct 2024 - Jan 2025</p>
+                        <p class="text-gray-700"><strong>Pinak Idea Lab</strong></p>
+                        <p class="text-gray-700 mt-2">Developed responsive front-end code using 11ty ,Tailwind CSS and JavaScript.</p>
                     </div>
                 </div>
             </div>
@@ -376,7 +396,7 @@
             <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition duration-300 flex flex-col items-center text-center">
                 <i class="fas fa-phone-alt text-orange-600 text-4xl mb-3"></i>
                 <h3 class="text-xl font-semibold text-gray-800">Call Me</h3>
-                <p class="text-gray-600 mt-2">📞 9619750636</p>
+                <p class="text-gray-600 mt-2">📞 <a href="tel:9619750636" class="hover:underline">9619750636</a></p>
             </div>
 
             <!-- Email -->
@@ -392,14 +412,14 @@
             <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition duration-300 flex flex-col items-center text-center">
                 <i class="fas fa-globe text-orange-600 text-4xl mb-3"></i>
                 <h3 class="text-xl font-semibold text-gray-800">Website</h3>
-                <p class="text-gray-600 mt-2">🌐 --</p>
+                <p class="text-gray-600 mt-2">🌐 <a href="#" target="_self" class="hover:underline">Myportfolio</a></p>
             </div>
 
             <!-- Location -->
             <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition duration-300 flex flex-col items-center text-center">
                 <i class="fas fa-map-marker-alt text-orange-600 text-4xl mb-3"></i>
                 <h3 class="text-xl font-semibold text-gray-800">Location</h3>
-                <p class="text-gray-600 mt-2">📍 Navi Mumbai</p>
+                <p class="text-gray-600 mt-2">📍 <a href="https://www.google.com/maps/place/Navi+Mumbai" target="_blank" class="hover:underline">Navi Mumbai</a></p>
             </div>
         </div>
 
@@ -470,19 +490,16 @@
     const mobileMenu = document.getElementById('mobileMenu');
     const navbarItems = document.querySelectorAll('.navbar-item');
 
-    // Toggle sidebar on hamburger click
     hamburger.addEventListener('click', () => {
-        mobileMenu.classList.toggle('active'); // Toggle visibility of sidebar
+        mobileMenu.classList.toggle('active');
     });
 
-    // Close the sidebar if the user clicks outside the sidebar
     document.addEventListener('click', (e) => {
         if (!mobileMenu.contains(e.target) && !hamburger.contains(e.target)) {
             mobileMenu.classList.remove('active'); // Close sidebar if click is outside
         }
     });
 
-    // Highlight active navbar item on scroll
     window.addEventListener('scroll', () => {
         let scrollPosition = window.scrollY;
 
